# matryoshka

./: CMakeLists.txt  README.md
.github/workflows/: testing.yml
matryoshka/: cli.cpp  main.cpp
matryoshka/data/: Error.cpp  Error.h  File.h  FileSystem.cpp  FileSystem.h  FileSystemObject.h  Folder.h  Path.cpp  Path.h
matryoshka/data/sqlite/: Blob.h  BlobReader.cpp  BlobReader.h  Database.cpp  Database.h  PreparedStatement.cpp  PreparedStatement.h  Query.cpp  Query.h  Result.h  Status.cpp  Status.h  Transaction.cpp  Transaction.h
matryoshka/data/util/: Cache.cpp  Cache.h  ChunkReader.cpp  ChunkReader.h  ContinuousReader.cpp  ContinuousReader.h  MetaTable.cpp  MetaTable.h  Reader.cpp  Reader.h
matryoshka/server/: Server.cpp  Server.h  main.cpp
matryoshka/shared/: Api.cpp  Api.h  resources.rc.in
matryoshka/shared/csharp/: csharp.cs
matryoshka/shared/examples/: csharp.cs
matryoshka/shared/python/: __main__.py  file.py  matryoshka.py  status.py
tests/: Cache.h  FileSystem.h  MetaTable.h  Path.h  Sqlite.h  main.cpp  sqlite.h
